--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,9 +1,10 @@
 .Logo {
-    max-width: 168px;
+    max-width: 85px;
+    padding-top: 5px;
   }
   @media (max-width: 800px) {
     .Logo {
-      max-width: 105px;
+      max-width: 50px;
     }
   }
   
@@ -25,6 +26,7 @@
   
     background: var(--black);
     border-bottom: 2px solid var(--primary);
+    opacity: 0.8;
   }
   body {
     --bodyPaddingTop: 70px;
@@ -67,7 +69,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: var(--primary);
+      background: var(--frontEnd);
       border-radius: 0;
       border: 0;
       text-align: center;
